Add more content: new blog posts, image, and enhanced about page

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,17 @@
                 <p>Discover the best crops to plant this season.</p>
                 <p>Posted on September 18, 2025</p>
             </article>
+            <article>
+                <h2>Nduma Planting at Pure Field Produce</h2>
+                <img src="https://scontent.fnbo13-1.fna.fbcdn.net/v/t39.30808-6/514597702_10064105947007113_7740705631971056024_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeEgNe6fncGESizJltVhKJB8d4Nx1__KNwR3g3HX_8o3BG5RpXTuBadUqxiZu0M9COlnUUo4Osu41b42AaWk2E-M&_nc_ohc=XNngO2jUcYUQ7kNvwE8vHJ-&_nc_oc=AdmztT3XeaihmCZxk5lyT-PSO79n8V3OXenFLqyFOU6tAEFjGRA1vBDvlIyAQQxcVew&_nc_zt=23&_nc_ht=scontent.fnbo13-1.fna&_nc_gid=p7AYvBp9NOzp0wyWUvW4RA&oh=00_AfaglQlOFKBDxYJzBzY298wg75lua76tc_-hm6UKTRq45w&oe=68D29193" alt="Nduma planting at Pure Field Produce" style="max-width:100%; height:auto;">
+                <p>In Bungoma's fertile soils, nduma (arrowroot) thrives with precise planting. Dig 1 ft deep trenches. Space holes 1 ft apart, planting suckers ½ ft deep. Add organic fertilizer for bumper yields. This method boosts sustainability and harvest.</p>
+                <p>Posted on September 19, 2025</p>
+            </article>
+            <article>
+                <h2>Intercropping Nduma with Kale at Pure Field Produce</h2>
+                <p>Intercropping nduma with kale boosts biodiversity, soil health, pest control, and yields for enhanced food security in Bungoma.</p>
+                <p>Posted on September 19, 2025</p>
+            </article>
         </section>
     </main>
     <footer>
