--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </section>
         <section class="intro">
             <h2>About Our Blog</h2>
-            <p>We share tips, stories, and updates from our farm.</p>
+            <p>We share tips, stories, and updates from our farm. Check out our latest posts on nduma planting techniques and intercropping with kale for sustainable yields.</p>
+            <p><a href="blog.html">Read our blog</a></p>
         </section>
     </main>
     <footer>
