--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
     <main>
         <section class="about">
             <h1>About Nduma Farming Farm</h1>
-            <p>Located in Bungoma, Nduma Farming Farm is dedicated to sustainable agriculture. We grow a variety of crops and raise livestock, sharing our knowledge through this blog.</p>
+            <p>Located in Bungoma, Nduma Farming Farm is dedicated to sustainable agriculture. We specialize in growing nduma (arrowroot) and other crops, employing innovative techniques like intercropping to enhance soil health and yields.</p>
+            <p>Our farm practices include precise planting methods for nduma, digging 1 ft deep trenches and spacing holes appropriately, combined with organic fertilizers for sustainable harvests. We also intercrop nduma with kale to boost biodiversity and pest control.</p>
+            <p>At Pure Field Produce, we focus on food security and eco-friendly farming, sharing our experiences and tips through this blog to help the community.</p>
             <p>Follow us on Facebook: <a href="https://web.facebook.com/profile.php?id=61571944475508" target="_blank">Nduma Farm Facebook</a></p>
         </section>
     </main>
