Update to use local images from images folder

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
     <main>
         <section class="about">
             <h1>About Nduma Farming Farm</h1>
+            <img src="images/planting_image.png" alt="Nduma Farming Farm" style="max-width:100%; height:auto; margin-bottom: 1rem;">
             <p>Located in Bungoma, Nduma Farming Farm is dedicated to sustainable agriculture. We specialize in growing nduma (arrowroot) and other crops, employing innovative techniques like intercropping to enhance soil health and yields.</p>
             <p>Our farm practices include precise planting methods for nduma, digging 1 ft deep trenches and spacing holes appropriately, combined with organic fertilizers for sustainable harvests. We also intercrop nduma with kale to boost biodiversity and pest control.</p>
             <p>At Pure Field Produce, we focus on food security and eco-friendly farming, sharing our experiences and tips through this blog to help the community.</p>
