--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <main>
         <section class="hero">
             <h1>Welcome to Nduma Farming Farm</h1>
+            <img src="images/intercropping_with_Kales.png" alt="Nduma Farming Farm" style="max-width:100%; height:auto; margin: 1rem 0;">
             <p>Discover the best in farming practices in Bungoma.</p>
         </section>
         <section class="intro">
